--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- Open Graph data -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Biểu đồ Coronavirus" />
-    <meta property="og:title" content="Biểu đồ xếp hạn coronavirus covichart.herokuapp.com" />
+    <meta property="og:title" content="Biểu đồ xếp hạn coronavirus" />
     <meta property="og:url" content="https://covichart.herokuapp.com/" />
     <meta property="og:image" content="https://cdn2.vectorstock.com/i/1000x1000/60/26/wuhan-coronavirus-prevention-campaign-flat-banner-vector-29336026.jpg" />
     <meta property="og:description" content="Biểu đồ cuộc đua virus Vũ Hán của các nước" />
@@ -13,7 +13,8 @@
     <meta content="coronavirus, virus vũ hán, wuhan virus, báo, covid-19 chart, covy chart, biểu đồ cô vy" />
     <meta property="article:author" content="nguyenduyphong" />
 
-    <title>Chart of Coronavirus Update (Live) from Worldometer</title>
+    <title>Coronavirus Chart</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/nolan/64/coronavirus.png">
     <link rel="stylesheet" href="css/chart.css" />
     <!-- Hightchart -->
     <script src="https://code.highcharts.com/highcharts.js"></script>
