add mete responsive

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="article:tag" content="coronavirus, virus vũ hán, wuhan virus, báo, covid-19 chart, covy chart, biểu đồ cô vy" />
     <meta content="coronavirus, virus vũ hán, wuhan virus, báo, covid-19 chart, covy chart, biểu đồ cô vy" />
     <meta property="article:author" content="nguyenduyphong" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Coronavirus Chart</title>
     <link rel="shortcut icon" href="https://img.icons8.com/nolan/64/coronavirus.png">
     <link rel="stylesheet" href="css/chart.css" />
