--- a/public/index.html
+++ b/public/index.html
@@ -77,13 +77,14 @@
             opacity: 0.95;
             z-index: 999999;
         }
+        html,body{height:100%; width:100%}
     </style>
 </head>
 
 <body>
-    <figure class="highcharts-figure">
+    <!-- <figure class="highcharts-figure"> -->
         <div id="container"></div>
-    </figure>
+    <!-- </figure> -->
     <form id="form-search-control" class="form-inline">
         <fieldset class="controller-group">
             <legend class="togvis">
