fix loading data and add toggle fieldset

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
         #form-search-control{
             position: fixed;
             top: 0;
-            left:0;
+            right:0;
             opacity: 0.95;
             z-index: 999999;
         }
