update chart style

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <!-- Open Graph data -->
     <meta property="og:type" content="website" />
@@ -78,6 +77,8 @@
             z-index: 999999;
         }
         html,body{height:100%; width:100%}
+        form{font-family: Tahoma, Helvetica, sans-serif}
+        /* fieldset {padding: 3px !important;} */
     </style>
 </head>
 
@@ -131,7 +132,7 @@
                     <option value="5000">5000px</option>
                     <option value="8000">8000px</option>
                 </select><br />
-                <a href="#" onclick="alert('Cảm ơn thiện chí của bạn, hiện tại chỉ là bản demo, mình sẽ cập nhật sau')">Góp ý</a>
+                <!-- <a href="#" onclick="alert('Cảm ơn thiện chí của bạn, hiện tại chỉ là bản demo, mình sẽ cập nhật sau')">Góp ý</a> -->
                 <!-- <button class="btn btn-primary btn-small" type="button" id="btnResize">Mở rộng đồ thị</button> -->
             </div>
         </fieldset>
