--- a/public/chart.html
+++ b/public/chart.html
@@ -1,36 +1,74 @@
-<!doctype html>
-<html lang="en">
+<html>
 
 <head>
-    <link rel="stylesheet" href="css/chart.css" />
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/data.js"></script>
-    <script src="https://code.highcharts.com/modules/drilldown.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
-    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <title>My first chart using FusionCharts Suite XT</title>
+    <!-- Include fusioncharts core library -->
+    <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"></script>
+    <!-- Include fusion theme -->
+    <script type="text/javascript"
+        src="https://cdn.fusioncharts.com/fusioncharts/latest/themes/fusioncharts.theme.fusion.js"></script>
+    <script type="text/javascript">
+        //STEP 2 - Chart Data
+        const chartData = [{
+            "label": "Venezuela",
+            "value": "290"
+        }, {
+            "label": "Saudi",
+            "value": "260"
+        }, {
+            "label": "Canada",
+            "value": "180"
+        }, {
+            "label": "Iran",
+            "value": "140"
+        }, {
+            "label": "Russia",
+            "value": "115"
+        }, {
+            "label": "UAE",
+            "value": "100"
+        }, {
+            "label": "US",
+            "value": "30"
+        }, {
+            "label": "China",
+            "value": "30"
+        }];
+
+        //STEP 3 - Chart Configurations
+        const chartConfig = {
+            type: 'column2d',
+            renderAt: 'chart-container',
+            width: '100%',
+            height: '400',
+            dataFormat: 'json',
+            dataSource: {
+                // Chart Configuration
+                "chart": {
+                    "labelDisplay": "rotate",
+                    "slantLabel": "1",
+                    "showLabels": "1",
+                    "caption": "Countries With Most Oil Reserves [2017-18]",
+                    "subCaption": "In MMbbl = One Million barrels",
+                    "xAxisName": "Country",
+                    "yAxisName": "Case Number",
+                    "numberSuffix": "K",
+                    "theme": "fusion",
+                },
+                // Chart Data
+                "data": chartData
+            }
+        };
+        FusionCharts.ready(function () {
+            var fusioncharts = new FusionCharts(chartConfig);
+            fusioncharts.render();
+        });
+
+    </script>
 </head>
 
 <body>
-    <div id="divResizer" style="position:fixed;height: 20px;width: 234px;top: 0;left: 0;z-index: 9999; margin: 2px;">
-        <input type="number" placeholder="input width" id="txtWidth" style="width:80px">
-        <button id="btnResize">Resize</button>
-    </div>
-    
-    <figure class="highcharts-figure">
-        <div id="container"></div>
-    </figure>
-    <script src="js/chart.js"></script>
-    <script>
-        $().ready(function () {
-            $('#btnResize').click(function () {
-                let width = $('#txtWidth').val()
-                $('#container').width(width ? width : '100%')
-                Chart.reflow();
-            });
-        })
-    </script>
+    <div id="chart-container">FusionCharts XT will load here!</div>
 </body>
 
 </html>
