add showing chart by areas feature

--- a/public/index.html
+++ b/public/index.html
@@ -108,6 +108,13 @@
                 <option value="all">Tất cả quốc gia</option>
                 <option value="5">Top 5 Nước</option>
                 <option value="10" selected>Top 10 Nước</option>
+                <option value="eastSouthAsia">Đông Nam Á</option>
+                <option value="middleEast">Trung Đông</option>
+                <option value="asia">Châu Á</option>
+                <option value="euro">Châu Âu</option>
+                <option value="america">Châu Mỹ</option>
+                <option value="africa">Châu Phi</option>
+                <option value="australia">Châu Úc</option>
                 <option value="20">Top 20 Nước</option>
                 <option value="30">Top 30 Nước</option>
                 <option value="40">Top 40 Nước</option>
