done adding areas to chart options

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet" />
+    <script src="data/world_areas.js"></script>
     <style>
         fieldset {
             border: 0.5px groove rgb(255,255,255) !important;
@@ -96,8 +97,8 @@
             <br/><br/>
             <!-- <label id="lbAge">Chọn loại đồ thị: </label> -->
             <select class="form-control" id="ddlCaseType" style="margin-top:-13px; margin-bottom: 5px; width:180px;">
-                <option value="totalCases">Tổng ca nhiễm</option>
-                <option value="newCases" selected>Ca nhiễm mới</option>
+                <option value="totalCases" selected>Tổng ca nhiễm</option>
+                <option value="newCases">Ca nhiễm mới</option>
                 <option value="totalDeaths">Tổng ca tử vong</option>
                 <option value="newDeaths">Ca tử vong mới</option>
                 <option value="totalRecovered">Tổng ca bình phục</option>
