--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta property="og:site_name" content="Biểu đồ Coronavirus" />
     <meta property="og:title" content="Biểu đồ xếp hạn coronavirus" />
     <meta property="og:url" content="https://covichart.herokuapp.com/" />
-    <meta property="og:image" content="https://cdn2.vectorstock.com/i/1000x1000/60/26/wuhan-coronavirus-prevention-campaign-flat-banner-vector-29336026.jpg" />
+    <meta property="og:image" content="img/earth-mask-covid.jpg" />
     <meta property="og:description" content="Biểu đồ cuộc đua virus Vũ Hán của các nước" />
     <meta property="article:tag" content="coronavirus, virus vũ hán, wuhan virus, báo, covid-19 chart, covy chart, biểu đồ cô vy" />
     <meta content="coronavirus, virus vũ hán, wuhan virus, báo, covid-19 chart, covy chart, biểu đồ cô vy" />
