edit seo and copyright

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <!-- Open Graph data -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Biểu đồ Coronavirus" />
-    <meta property="og:title" content="Biểu đồ xếp hạn coronavirus" />
+    <meta property="og:title" content="Biểu đồ covid-19 các quốc gia" />
     <meta property="og:url" content="https://covichart.herokuapp.com/" />
     <meta property="og:image" content="img/earth-mask-covid.jpg" />
-    <meta property="og:description" content="Biểu đồ cuộc đua virus Vũ Hán của các nước" />
+    <meta property="og:description" content="Tổng ca nhiếm, nhiễm mới & tử vong  các Châu, Đông Nam Á, Trung Đông, Top [5,10,20,30,40,50]" />
     <meta property="article:tag" content="coronavirus, virus vũ hán, wuhan virus, báo, covid-19 chart, covy chart, biểu đồ cô vy" />
     <meta content="coronavirus, virus vũ hán, wuhan virus, báo, covid-19 chart, covy chart, biểu đồ cô vy" />
-    <meta property="article:author" content="nguyenduyphong" />
+    <meta property="article:author" content="covi.phonglongdong.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Coronavirus Chart</title>
     <link rel="shortcut icon" href="https://img.icons8.com/nolan/64/coronavirus.png">
