--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,6 @@
         _u = _.noConflict();
     </script>
     <script src="js/chart.js"></script>
-    <script src="js/fetch.js"></script>
+    <!-- <script src="js/fetch.js"></script> -->
 </body>
 </html>
