--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <!-- Open Graph data -->
     <meta property="og:type" content="website" />
@@ -7,7 +8,8 @@
     <meta property="og:title" content="Biểu đồ covid-19 các quốc gia" />
     <meta property="og:url" content="https://covichart.herokuapp.com/" />
     <meta property="og:image" content="img/earth-mask-covid.jpg" />
-    <meta property="og:description" content="Tổng ca nhiếm, nhiễm mới & tử vong  các Châu, Đông Nam Á, Trung Đông, Top [5,10,20,30,40,50]" />
+    <meta property="og:description"
+        content="Tổng ca nhiếm, nhiễm mới & tử vong  các Châu, Đông Nam Á, Trung Đông, Top [5,10,20,30,40,50]" />
     <meta property="article:tag" content="coronavirus, covid-19 chart, Cô Vy, covy, biểu đồ covid-19" />
     <meta content="Tổng ca nhiếm, nhiễm mới & tử vong  các Châu, Đông Nam Á, Trung Đông, Top [5,10,20,30,40,50]" />
     <meta property="article:author" content="covi.phonglongdong.com" />
@@ -36,20 +38,29 @@
     <script src="data/world_areas.js"></script>
     <link rel="stylesheet" href="css/chart.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164564768-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-164564768-1');
+    </script>
 </head>
 
 <body>
     <!-- <figure class="highcharts-figure"> -->
-        <div id="container"></div>
+    <div id="container"></div>
     <!-- </figure> -->
     <form id="form-search-control" class="form-inline">
         <fieldset class="controller-group">
             <legend class="togvis">
-                <h6><img id="imgToggle" src="http://icons.iconarchive.com/icons/icons8/ios7/16/Editing-Collapse-icon.png"/></h6>
+                <h6><img id="imgToggle"
+                        src="http://icons.iconarchive.com/icons/icons8/ios7/16/Editing-Collapse-icon.png" /></h6>
             </legend>
             <i class="far fa-calendar-alt fa-2x" style="margin-top: 2px;color: #000;"></i>
             <input id="datepickerCovid" style="width:110px; margin-top: -13px;" type="text" class="form-control">
-            <br/><br/>
+            <br /><br />
             <!-- <label id="lbAge">Chọn loại đồ thị: </label> -->
             <select class="form-control" id="ddlCaseType" style="margin-top:-13px; margin-bottom: 5px; width:180px;">
                 <option value="totalCases" selected>Tổng ca nhiễm</option>
@@ -60,7 +71,8 @@
                 <option value="activeCases">Ca đang điều trị</option>
                 <option value="seriousCritical">Số ca nghiêm trọng</option>
             </select>
-            <select class="form-control" id="ddlLimitedCountry" style="margin-top: -13px; margin-bottom: 5px; width: 150px;">
+            <select class="form-control" id="ddlLimitedCountry"
+                style="margin-top: -13px; margin-bottom: 5px; width: 150px;">
                 <option value="all">Tất cả quốc gia</option>
                 <option value="5">Top 5 Nước</option>
                 <option value="10" selected>Top 10 Nước</option>
@@ -75,12 +87,12 @@
                 <option value="30">Top 30 Nước</option>
                 <option value="40">Top 40 Nước</option>
                 <option value="50">Top 50 Nước</option>
-            </select><br/>
-            
+            </select><br />
+
             <input type="checkbox" id="cbIsIncludedTheWorld">
-            <label>Hiện thị dữ liệu thế giới</label><br/>
-            <button id="btnViewChart" type="button" style="margin-top:-13px; display: none;" class="btn btn-primary btn-small"><i
-                    class="fa fa-refresh"></i><span></span> Xem đồ thị</button>
+            <label>Hiện thị dữ liệu thế giới</label><br />
+            <button id="btnViewChart" type="button" style="margin-top:-13px; display: none;"
+                class="btn btn-primary btn-small"><i class="fa fa-refresh"></i><span></span> Xem đồ thị</button>
             <div id="divResizer2" style="margin:2px; padding:0;">
                 <select class="form-control" id="ddlSizeChart" style="width: 160px;">
                     <option value="all" selected>Kéo dài biểu đồ</option>
@@ -105,4 +117,5 @@
     <script src="js/chart.js"></script>
     <!-- <script src="js/fetch.js"></script> -->
 </body>
+
 </html>
