--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         <fieldset class="controller-group">
             <legend class="togvis">
                 <h6><img id="imgToggle"
-                        src="http://icons.iconarchive.com/icons/icons8/ios7/16/Editing-Collapse-icon.png" /></h6>
+                        src="img/Editing-Collapse-icon.png" /></h6>
             </legend>
             <i class="far fa-calendar-alt fa-2x" style="margin-top: 2px;color: #000;"></i>
             <input id="datepickerCovid" style="width:110px; margin-top: -13px;" type="text" class="form-control">
