fix bug(miss out some country)

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:site_name" content="Biểu đồ Covid-19" />
     <meta property="og:title" content="Biểu đồ covid-19 các quốc gia" />
     <meta property="og:url" content="https://covi.phonglongdong.com" />
-    <meta property="og:image" content="img/earth-mask-covid.jpg" />
+    <meta property="og:image" content="img/chart.covi.phonglongdong.jpg" />
     <meta property="og:description"
         content="Tổng ca nhiếm, nhiễm mới & tử vong  các Châu, Đông Nam Á, Trung Đông, Top [6,10,20,30,40,50]" />
     <meta property="article:tag" content="coronavirus, covid-19 chart, Cô Vy, covy, biểu đồ covid-19" />
