--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,16 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset='utf-8'></meta>
-
     <!-- Open Graph data -->
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Biểu đồ Covid-19" />
-    <meta property="og:title" content="Biểu đồ covid-19 các quốc gia" />
+    <meta property="og:site_name" content="Biểu đồ so sánh covid-19 các quốc gia" />
+    <meta property="og:title" content="Biểu đồ so sánh covid-19 các quốc gia" />
     <meta property="og:url" content="https://covi.phonglongdong.com" />
     <meta property="og:image" content="img/chart.covi.phonglongdong.jpg" />
     <meta property="og:description"
         content="Tổng ca nhiếm, nhiễm mới & tử vong  các Châu, Đông Nam Á, Trung Đông, Top [6,10,20,30,40,50]" />
-    <meta property="article:tag" content="coronavirus, covid-19 chart, Cô Vy, covy, biểu đồ covid-19" />
+    <meta property="article:tag" content="coronavirus, covid-19 chart, Cô Vy, covy, Biểu đồ so sánh covid-19 các quốc gia" />
     <meta content="Tổng ca nhiếm, nhiễm mới & tử vong  các Châu, Đông Nam Á, Trung Đông, Top [6,10,20,30,40,50]" />
     <meta property="article:author" content="covi.phonglongdong.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,8 +42,8 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet" />
-    <script src="data/world_areas.js?v=5"></script>
-    <script src="js/lang.js"></script>
+    <script src="data/world_areas.js?v=6"></script>
+    <script src="js/lang.js?v=2"></script>
     <link rel="stylesheet" href="css/chart.css" />
     <link rel="stylesheet" href="css/style.css" />
 
@@ -102,7 +100,7 @@
                 <option value="euro">Châu Âu</option>
                 <option value="america">Châu Mỹ</option>
                 <option value="africa">Châu Phi</option>
-                <option value="australia">Châu Úc</option>
+                <option value="oceania">Châu Úc</option>
                 <option value="20">Top 20 Nước</option>
                 <option value="30">Top 30 Nước</option>
                 <option value="40">Top 40 Nước</option>
@@ -134,7 +132,7 @@
     <script>
         _u = _.noConflict();
     </script>
-    <script src="js/chart.js?v=6"></script>
+    <script src="js/chart.js?v=9"></script>
 </body>
 
 </html>
