--- a/public/index.html
+++ b/public/index.html
@@ -42,13 +42,13 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet" />
-    <script src="data/world_areas.js?v=6"></script>
+    <script src="data/world_areas.js?v=7"></script>
     <script src="js/lang.js?v=2"></script>
     <link rel="stylesheet" href="css/chart.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css?v=2" />
 
     <!-- MDBootstrap flags -->
-    <link href="css/flag.min.css" rel="stylesheet">
+    <link href="css/flag.min.css?v=1" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164564768-1"></script>
     <script>
@@ -132,7 +132,7 @@
     <script>
         _u = _.noConflict();
     </script>
-    <script src="js/chart.js?v=9"></script>
+    <script src="js/chart.js?v=10"></script>
 </body>
 
 </html>
