--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet" />
     <script src="data/world_areas.js?v=7"></script>
-    <script src="js/lang.js?v=4"></script>
+    <script src="js/lang.js?v=5"></script>
     <link rel="stylesheet" href="css/chart.css" />
     <link rel="stylesheet" href="css/style.css?v=2" />
 
@@ -86,12 +86,14 @@
                 <option value="totalDeaths">Tổng ca tử vong</option>
                 <option value="newDeaths">Ca tử vong mới</option>
                 <option value="totalRecovered">Tổng ca bình phục</option>
+                <option value="totalRecovered">Ca bình phục mới</option>
                 <option value="activeCases">Ca đang điều trị</option>
                 <option value="seriousCritical">Số ca nghiêm trọng</option>
                 <option value="totalCasesPer1MPop">Mật độ nhiễm(ca/triệu dân)</option>
                 <option value="deathsPer1MPop">Mật độ tử vong(ca/triệu dân)</option>
                 <option value="totalTests">Tổng ca xét nghiệm</option>
                 <option value="testsPer1MPop">Mật độ xét nghiệm(ca/triệu dân)</option>
+                <option value="pop">Tổng dân số</option>
             </select><br />
             <select class="form-control" id="ddlLimitedCountry" style="margin-bottom: 5px; width: 150px;">
                 <option value="all">Tất cả quốc gia</option>
@@ -141,7 +143,7 @@
     <script>
         _u = _.noConflict();
     </script>
-    <script src="js/chart.js?v=11"></script>
+    <script src="js/chart.js?v=12"></script>
 </body>
 
 </html>
